# clipkeeper

./: Cargo.toml  README.md
.github/workflows/: publish-crate-lib.yml
examples/: basic.rs  custom_path.rs
src/: lib.rs  windows_clipboard.rs
